--- a/Makefile.vstplugin
+++ b/Makefile.vstplugin
@@ -21,11 +21,13 @@ endif
 INCLUDES:=-Isrc/vstplugin
 INCLUDES+=-Isrc/synth
 INCLUDES+=-Isrc/gui
+INCLUDES+=-Isrc/standalone
 INCLUDES+=-I$(VST_PATH)
 
 SOURCES:=src/vstplugin/oxevst.cpp
 SOURCES+=src/vstplugin/oxevsteditor.cpp
 SOURCES+=src/vstplugin/oxevstmain.cpp
+SOURCES+=src/standalone/windowstoolkit.cpp
 SOURCES+=src/gui/button.cpp
 SOURCES+=src/gui/channels.cpp
 SOURCES+=src/gui/editor.cpp
