--- a/Makefile.standalone
+++ b/Makefile.standalone
@@ -17,10 +17,11 @@
 INCLUDES:=-Isrc/standalone
 INCLUDES+=-Isrc/synth
 INCLUDES+=-Isrc/gui
+INCLUDES+=-Isrc/toolkits
 
 SOURCES:=src/standalone/controller.cpp
 SOURCES+=src/standalone/main.cpp
-SOURCES+=src/standalone/windowstoolkit.cpp
+SOURCES+=src/toolkits/windowstoolkit.cpp
 SOURCES+=src/gui/button.cpp
 SOURCES+=src/gui/channels.cpp
 SOURCES+=src/gui/editor.cpp
