--- a/Makefile.vstwindows
+++ b/Makefile.vstwindows
@@ -18,16 +18,16 @@ ifeq ($(VST_PATH),)
     $(error Please set the VST_PATH environment variable to the vstsdk2.4 path)
 endif
 
-INCLUDES:=-Isrc/vstplugin
+INCLUDES:=-Isrc/vstwindows
 INCLUDES+=-Isrc/synth
 INCLUDES+=-Isrc/gui
-INCLUDES+=-Isrc/standalone
+INCLUDES+=-Isrc/toolkits
 INCLUDES+=-I$(VST_PATH)
 
-SOURCES:=src/vstplugin/oxevst.cpp
-SOURCES+=src/vstplugin/oxevsteditor.cpp
-SOURCES+=src/vstplugin/oxevstmain.cpp
-SOURCES+=src/standalone/windowstoolkit.cpp
+SOURCES:=src/vstwindows/oxevst.cpp
+SOURCES+=src/vstwindows/oxevsteditor.cpp
+SOURCES+=src/vstwindows/oxevstmain.cpp
+SOURCES+=src/toolkits/windowstoolkit.cpp
 SOURCES+=src/gui/button.cpp
 SOURCES+=src/gui/channels.cpp
 SOURCES+=src/gui/editor.cpp
@@ -67,12 +67,12 @@ endif
 all: oxevst32 oxevst64
 
 oxevst32:
-	@$(RC)   -Isrc/synth -Iskins/default src/vstplugin/vstplugin.rc resources32.o
+	@$(RC)   -Isrc/synth -Iskins/default src/vstwindows/vstplugin.rc resources32.o
 	@$(CC)   -static -s -O3 -shared -o oxevst.dll   $(VST_PATH)/public.sdk/samples/vst2.x/win/vstplug.def $(CFLAGS) $(SOURCES) $(INCLUDES) $(LIBS) resources32.o
 	@rm resources32.o
 
 oxevst64:
-	@$(RC64) -Isrc/synth -Iskins/default src/vstplugin/vstplugin.rc resources64.o
+	@$(RC64) -Isrc/synth -Iskins/default src/vstwindows/vstplugin.rc resources64.o
 	@$(CC64) -static -s -O3 -shared -o oxevst64.dll $(VST_PATH)/public.sdk/samples/vst2.x/win/vstplug.def $(CFLAGS) $(SOURCES) $(INCLUDES) $(LIBS) resources64.o
 	@rm resources64.o
 
