--- a/Makefile.vstlinux
+++ b/Makefile.vstlinux
@@ -19,7 +19,7 @@ ifeq ($(VST_PATH),)
 endif
 
 INCLUDES:=-Isrc/vstcommon
-INCLUDES+=-Isrc/vstwindows
+INCLUDES+=-Isrc/vstlinux
 INCLUDES+=-Isrc/synth
 INCLUDES+=-Isrc/gui
 INCLUDES+=-Isrc/toolkits
@@ -27,8 +27,8 @@ INCLUDES+=-I$(VST_PATH)
 
 SOURCES:=src/vstcommon/oxevst.cpp
 SOURCES+=src/vstcommon/oxevstmain.cpp
-SOURCES+=src/vstwindows/oxevsteditor.cpp
-SOURCES+=src/toolkits/windowstoolkit.cpp
+SOURCES+=src/vstlinux/oxevsteditor.cpp
+SOURCES+=src/toolkits/xlibtoolkit.cpp
 SOURCES+=src/gui/button.cpp
 SOURCES+=src/gui/channels.cpp
 SOURCES+=src/gui/editor.cpp
@@ -51,31 +51,11 @@ SOURCES+=$(VST_PATH)/public.sdk/source/vst2.x/audioeffect.cpp
 SOURCES+=$(VST_PATH)/public.sdk/source/vst2.x/audioeffectx.cpp
 SOURCES+=$(VST_PATH)/public.sdk/source/vst2.x/vstplugmain.cpp
 
-LIBS:=-lgdi32
+LIBS:=-lX11
+CFLAGS+=-fPIC 
 
-ifeq ($(OS),Windows_NT)
-	CC:=i686-w64-mingw32-g++.exe
-	RC:=windres.exe
-	CC64:=x86_64-w64-mingw32-g++.exe
-	RC64:=windres.exe
-else
-	CC:=i686-w64-mingw32-g++
-	RC:=i686-w64-mingw32-windres
-	CC64:=x86_64-w64-mingw32-g++
-	RC64:=x86_64-w64-mingw32-windres
-endif
-
-all: oxevst32 oxevst64
-
-oxevst32:
-	@$(RC)   -Isrc/synth -Iskins/default src/vstwindows/vstplugin.rc resources32.o
-	@$(CC)   -static -s -O3 -shared -o oxevst.dll   $(VST_PATH)/public.sdk/samples/vst2.x/win/vstplug.def $(CFLAGS) $(SOURCES) $(INCLUDES) $(LIBS) resources32.o
-	@rm resources32.o
-
-oxevst64:
-	@$(RC64) -Isrc/synth -Iskins/default src/vstwindows/vstplugin.rc resources64.o
-	@$(CC64) -static -s -O3 -shared -o oxevst64.dll $(VST_PATH)/public.sdk/samples/vst2.x/win/vstplug.def $(CFLAGS) $(SOURCES) $(INCLUDES) $(LIBS) resources64.o
-	@rm resources64.o
+all:
+	@g++ -s -O3 -shared -o oxevst.so $(CFLAGS) $(SOURCES) $(INCLUDES) $(LIBS)
 
 clean:
-	@rm -f oxevst*.dll
+	@rm -f oxevst.so
