--- a/src/standalone/standalone.rc
+++ b/src/standalone/standalone.rc
@@ -2,8 +2,8 @@
 #include "resource.h"
 #include "constants.h"
 
-IDI_ICONE               ICON    DISCARDABLE     "icon.ico"
-IDB_CARACTERES          BITMAP  DISCARDABLE     "chars.bmp"
+IDI_ICON                ICON    DISCARDABLE     "icon.ico"
+IDB_CHARS               BITMAP  DISCARDABLE     "chars.bmp"
 IDB_KNOB                BITMAP  DISCARDABLE     "knob.bmp"
 IDB_KNOB2               BITMAP  DISCARDABLE     "knob2.bmp"
 IDB_KNOB3               BITMAP  DISCARDABLE     "knob3.bmp"
@@ -29,9 +29,9 @@ BEGIN
             VALUE "CompanyName", "Oxe Music Software"
             VALUE "FileDescription", "Oxe FM Synth Standalone"
             VALUE "FileVersion", VERSION_STR
-            VALUE "InternalName", "oxeexe"
+            VALUE "InternalName", "oxefmsynth"
             VALUE "LegalCopyright", "Copyright Daniel Moura, GNU GPL"
-            VALUE "OriginalFilename", "oxeexe.exe"
+            VALUE "OriginalFilename", "oxefmsynth.exe"
             VALUE "ProductName", "Oxe FM Synth"
             VALUE "ProductVersion", VERSION_STR
         END
