--- a/src/windows/resources.rc
+++ b/src/windows/resources.rc
@@ -1,5 +1,5 @@
 #include <windows.h>
-#include "resource.h"
+#include "resources.h"
 #include "constants.h"
 
 IDI_ICON                ICON    DISCARDABLE     "icon.ico"
