--- a/Makefile.vstlinux
+++ b/Makefile.vstlinux
@@ -27,6 +27,7 @@ INCLUDES+=-I$(VST_PATH)
 SOURCES:=src/vst/oxevst.cpp
 SOURCES+=src/vst/oxevstmain.cpp
 SOURCES+=src/vst/oxevsteditor.cpp
+SOURCES+=src/vst/vsthostinterface.cpp
 SOURCES+=src/toolkits/xlibtoolkit.cpp
 SOURCES+=src/gui/button.cpp
 SOURCES+=src/gui/channels.cpp
