--- a/Makefile.standalone
+++ b/Makefile.standalone
@@ -82,7 +82,7 @@ else
             SOURCES+=src/toolkits/cocoatoolkit.cpp
             SOURCES+=src/toolkits/cocoatoolkit.m
         else ifeq ($(USE_GNUSTEP),YES)
-            CFLAGS+=-D__GLUT__
+            CFLAGS+=-D__APPLE__
             LDFLAGS+=-lobjc -lgnustep-base -lgnustep-gui -ldl
             OBJCFLAGS+=`gnustep-config --objc-flags`
             OBJCSOURCES+=src/toolkits/cocoatoolkit.m
