--- a/Makefile.vstmacosx
+++ b/Makefile.vstmacosx
@@ -52,6 +52,7 @@ SOURCES+=src/synth/synthesizer.cpp
 SOURCES+=$(VSTSDK_PATH)/public.sdk/source/vst2.x/audioeffect.cpp
 SOURCES+=$(VSTSDK_PATH)/public.sdk/source/vst2.x/audioeffectx.cpp
 SOURCES+=$(VSTSDK_PATH)/public.sdk/source/vst2.x/vstplugmain.cpp
+SOURCES+=bitmaps.cpp
 
 CFLAGS+=-framework Cocoa
 
@@ -65,12 +66,12 @@ BUNDLE_NAME:=oxefmsynth.vst
 BUNDLE_CONTENTS:=$(BUNDLE_NAME)/Contents
 BUNDLE_FULL_PATH:=$(BUNDLE_CONTENTS)/MacOS
 
-oxevst: bitmaps.h
+oxevst: bitmaps.cpp
 	@mkdir -p $(BUNDLE_FULL_PATH)
 	@cp src/macosx/vst/* $(BUNDLE_CONTENTS)/
 	@g++ -shared -o $(BUNDLE_FULL_PATH)/oxefmsynth $(CFLAGS) $(SOURCES) $(INCLUDES) $(LIBS)
 
-bitmaps.h:
+bitmaps.cpp:
 	@$(CC) -o embedresources src/toolkits/embedresources.cpp
 	@./embedresources $@
 	@rm embedresources
